--- a/20210429.md
+++ b/20210429.md
@@ -1,44 +1,136 @@
 # 4月29日 今日は昭和の日！
-自習部屋
+
+[![hackmd-github-sync-badge](https://hackmd.io/n4cZrxh-Say2QsyVu3TTwQ/badge)](https://hackmd.io/n4cZrxh-Say2QsyVu3TTwQ)
+
 
 ## 予定
 - [x] 撮影会
 - [x] 失敗の科学 4章
-- [ ] 失敗の科学 5章
-- [ ] 失敗の科学 6章
-- [ ] 行動を変えるデザイン 5章
-- [ ] 失敗の科学 輪読会
-- [ ] さらばすべてのエヴァンゲリオン
-- [ ] ゆるキャン△ （ドラマ）
+- [x] 失敗の科学 5章
+- [x] 失敗の科学 6章
+- [x] 行動を変えるデザイン 6章
+- [x] 失敗の科学 輪読会
+- [x] さようなら全てのエヴァンゲリオン
+- [x] ゆるキャン△ （ドラマ）
 
 ## 作業ログ
-### 失敗の科学 4章
+
+### 撮影会
+いい加減オートフォーカスから卒業したい
+
+
+### 失敗の科学
+#### 4章
 * 小さな改善大きな飛躍（マージナルゲイン）
   * 大きなゴールを小さく分解
   * １つ１つ改善して積み重ねる
 * 開発援助
-* 世界で最も貧しい人の暮らしを改善すること
-* グラフは横ばいだが…
-* 援助がなかったら、GDPは下がってたかも
-* 援助がなかったらGDPは上がっていたかも
+  * 世界で最も貧しい人の暮らしを改善すること
+  * グラフは横ばいだが…
+  * 援助がなかったら、GDPは下がってたかも
+  * 援助がなかったらGDPは上がっていたかも
 * ランダム化比較試験（RCT）
-* 規模が大きいと難しい（アフリカ大陸は１つ） →そこでマージナルゲイン
-* プログラム１つ１つにRCT
-* 問題を要素分解
-* 分解された要素からKPI測定
-* 仮説を立てる
-* RCT（ex. A/Bテスト）で改善点の効果計測（反事実の確認）
+  * 規模が大きいと難しい（アフリカ大陸は１つ） →そこでマージナルゲイン
+  * プログラム１つ１つにRCT
+* マージナルゲインとは？
+  * 問題を要素分解
+  * 分解された要素からKPI測定
+  * 仮説を立てる
+  * RCT（ex. A/Bテスト）で改善点の効果計測（反事実の確認）
 
+#### ５章
+* 非難の心理
+  * 経緯よりも「誰の責任か」を追求しがち
+  * 学習能力を妨げてしまう
+* 内因=>認知的不協和
+* 外因=>非難というプレッシャー 
+* 実際に何が起きたかを理解する前に、勝手な批判をすることは無意味(<=でもやりがち)
+* あらゆる角度からの比較検討
+* ミスを責め立てる=>失敗を報告しなくなる=>物事が改善しなくなる 悪循環！
+* 懲罰志向のチーム
+  * ミスの報告は少ない
+  * より多くのミスを犯す
+  * 看護師長を信頼していなかった
+* 非難傾向の低いチーム
+  * ミスの報告は多い
+  * 実際に犯したミスは少ない
+* 根本的な帰属の誤り
+  * 人の行動の原因を性格的な要因に求め、状況的な要因を軽視する傾向
+  * 脳は勝手な理屈を組み立てる 
+*  「真の無知とは、知識の欠如ではない。学習の拒絶である」(カール・ポパー)
+
+* 無実の人を責めるということ(魔女狩り)
+
+### ６章
+* 失敗は「してもいい」ではなく「欠かせない」
+  * ベッカムの数えきれないほどの失敗したシュート
+* 失敗から学ばない傾向の克服
+* 固定型マインドセットと成長型マインドセット
+  * 成長型マインドセットの被験者は間違いに着目する！
+  * 失敗から学べつ人は、失敗を自分の力を伸ばす上で欠かせないものとして自然に受け止めている
+  * 固定型マインドセットの人は「才能がない」と受け止めてしまう
+  * 固定型マインドセットの人は、失敗を自分の知性のせいにしてしまう(僕は頭が悪いんだとか) 
 
 ### 行動を変えるデザイン
 行動を構造化
 
+* ユーザーの行動を書き出し一覧化(ビヘイビアプラン)
+  * ターゲットアクションを完遂する全てのステップを表したもの
+  * プロダクト外のものも含む
+* カスタマーエクスペリエンスマップ
+
+* プランを立てる
+  * ビヘイビアプランのステップ一つ一つに対して、ユーザーについて学んだことを適応していく
+* 実用最小限のアクション(MVA)
+　　* 「ユーザーが絶対にしなければならないター ゲットアクションを、一番短くシンプルなかたちにしたもの」
+　　*  繰り返しの行動を、一度きりの行動に削ぎ落とそう
+　　*  大きなアクションをシンプルなアクションに削ぎ落とす
+　　*  「あったらいい」程度のステップは無くす
+　　*  リスクが高く、不確実なプロセスの部分を優先して肉付けする
+* チートできるかどうか検討する
+* プロセスをシンプルにし、自動化し、デフォルトにし、「ついで」にする 
+* 習慣にできそうな行動
+* 認知過負荷
+  * わかりやすさを優先
+* よくある失敗
+  * 簡単でしょ！(「自分にとって」簡単なので大丈夫と思ってしまう)
+  * 大変だからこそ頑張ってくれるようになる(そうとも限らない)
+* 小さな成功体験 (「小さな勝利」を)
+
+* まとめ
+  * やること => ターゲットアクションを、ユーザーが完遂する必要がある個別のステップに分解
+  * 陥りやすいこと => ユーザーが行うことをチームメンバーが明確かつ単純に伝えられない。/  社内だけで、行動が簡単だと思い込んでいる。
+  * 成果物 =>  ビヘイビアプラン:ユーザー行動の具体的な一連のステップ
 
 ## 実績
+- 目標としてた読書は完遂
+
 
 ## 振り返り
+### Keep
+- Zoomに繋いでいると、見られている感じがしていい
+- 低気圧のような気象による体調不良の場合は無理せずマイペースにやる
+- 気分が悪かったら横になって休憩。無理するより持続する
+
+
+### Problem
+- 自分の消化できるポイント数が不確定でTODO決めづらい
+- HackMDにまとめることだけじゃ物足りない。noteとかにまとめることをやってもいいかも
+
+### Try
+- 学んだことはnoteにまとめてみる 
+
 
 ## 所感
+低気圧がひどい
+![](https://i.imgur.com/IQeLTAN.jpg)
+
+その中でもTO消化できたのは良かった。あまり無理ない計画と、ちゃんと休むこと。
+ON/OFF の切り替えはとても大事。
+雨の日は運動不足になりがち。
+
 
 ## 雑
+- https://ja.wikipedia.org/wiki/%E3%82%B3%E3%83%B3%E3%82%B3%E3%83%AB%E3%83%89%E5%8A%B9%E6%9E%9C
+- 
 
