--- a/20210430.md
+++ b/20210430.md
@@ -1,18 +1,61 @@
 # 4月30日 連休の間
 
+[![hackmd-github-sync-badge](https://hackmd.io/XPvf45nWSIKx_O3QRsaFmg/badge)](https://hackmd.io/XPvf45nWSIKx_O3QRsaFmg)
+
+
 ## 予定
-- [ ] RxJS Live! Asia
-- [ ] 写真レタッチ
-- [ ] 行動を変えるデザイン 6章をまとめる
+- [x] RxJS Live! Asia
+- [x] 写真レタッチ
+- [x] 行動を変えるデザイン 6章をまとめる
+- [ ] フロントエンドクラブ (Clubhouse)
 
 ### nice to have
-- [ ] フォトウォーク
-
+- [x] フォトウォーク
 
 ## 作業ログ
+### RxJS Live! Asia
+
+RxJS難しい
+
+#### RxJS7について
+* TypeScript 4.2サポート
+* 容量はすごく減った(53%!)
+   * 大きなアーキテクチャ変更なく、リファクタリングだけで53%減らしたのすごい
+* toPromise（）depreated
+* 一貫性のあるAPI
+
+
+
+下記はちゃんと復習して使えるようにならないと
+![](https://i.imgur.com/t5Qw7rT.jpg)
+
+最後まで見たが、わからないところも多かったので要復習
+
+### 写真レタッチ
+LightRoomを使ってレタッチ
+ポートレートは諸事情で公開できないので、今日フォトウォークで撮影した電柱を代わりに。
+
+![](https://i.imgur.com/U2lPlgO.jpg)
 
 ## 実績
 
 ## 振り返り
+前回try
+* 学んだことはnoteにまとめてみる 
+
+### Keep
+
+### Problem
+* 英語のセミナーは自己肯定感が下がる(できないかんが出てしまう)
+* どうも英語に関しては固定型マインドセットになっているらしい(何度も挫折して成功体験を得られてない)
+
+### try
+* 英語に関して成功体験を得る方法を探す
+* rxjsの勉強
 
 ## 所感
+
+## 雑
+
+https://docs.google.com/presentation/d/1-LU7YE3NWw8jHeAgdmLu4CBfG7osCx6MsSIeFs16k60/edit?usp=sharing
+
