--- a/20210430.md
+++ b/20210430.md
@@ -44,16 +44,23 @@ LightRoomを使ってレタッチ
 * 学んだことはnoteにまとめてみる 
 
 ### Keep
+* 読んだ本のまとめを別日にしたのがよかった(理解ができないところがよくわかる)
+* とりあえず、RxJS Live!はいいきっかけになったので、カンファレンスに出てみるのはあり
 
 ### Problem
 * 英語のセミナーは自己肯定感が下がる(できないかんが出てしまう)
 * どうも英語に関しては固定型マインドセットになっているらしい(何度も挫折して成功体験を得られてない)
+* 全体的に自己肯定感が低下している感じがした
 
 ### try
 * 英語に関して成功体験を得る方法を探す
 * rxjsの勉強
+* 自己肯定感の向上
 
 ## 所感
+
+天気がいい日は外に出ないと気分が落ちる。
+お昼や夕方にフォトウォークに出られたのはよかった。
 
 ## 雑
 
