--- a/20210430.md
+++ b/20210430.md
@@ -7,7 +7,7 @@
 - [x] RxJS Live! Asia
 - [x] 写真レタッチ
 - [x] 行動を変えるデザイン 6章をまとめる
-- [ ] フロントエンドクラブ (Clubhouse)
+- [x] フロントエンドクラブ (Clubhouse)
 
 ### nice to have
 - [x] フォトウォーク
