--- a/20210430.md
+++ b/20210430.md
@@ -66,3 +66,5 @@ LightRoomを使ってレタッチ
 
 https://docs.google.com/presentation/d/1-LU7YE3NWw8jHeAgdmLu4CBfG7osCx6MsSIeFs16k60/edit?usp=sharing
 
+
+###### tags: `日報`
