--- a/20210429.md
+++ b/20210429.md
@@ -132,5 +132,8 @@ ON/OFF の切り替えはとても大事。
 
 ## 雑
 - https://ja.wikipedia.org/wiki/%E3%82%B3%E3%83%B3%E3%82%B3%E3%83%AB%E3%83%89%E5%8A%B9%E6%9E%9C
-- 
+
+
+
+###### tags: `日報`
 
