--- a/20210501.md
+++ b/20210501.md
@@ -1,32 +1,59 @@
 # 5月1日 土曜日は休養の日！
 
+[![hackmd-github-sync-badge](https://hackmd.io/cfVZlPGzQ0u0OXQTgDOToA/badge)](https://hackmd.io/cfVZlPGzQ0u0OXQTgDOToA)
 
 
 行動として、３人以上はいいところを見つけて褒める
 
 ## 予定
-- [ ] フォトウォーク
-- [ ] 失敗の科学 発表資料まとめ
+- [x] フォトウォーク
+- [x] 失敗の科学 発表資料まとめ
 - [ ] ユニコーン企業のひみつ １章読む
+- [x] 美容室に行く
 - [ ] AWS修行
 
 ### nice to have
-- [ ] 「自己肯定感を持っていますか？」読む
+- [x] 「自己肯定感を持っていますか？」読む
 
 
 ## 作業ログ
+### フォトウォーク
+- バラを撮影しました。
+
+### 失敗の科学 発表資料まとめ
+- 一昨日読んだことを、資料にまとめてみる
+- 実例に関してはもう一度読み返したい
+- あとは、他にも実例がありそう
+
 
 ## 実績
+- あんまり何もできてない
+- 休養日だからまあいいか
+- AWSの勉強の時間が取れなかった
+
 
 ## 振り返り
 
 ### Keep
+- 休むときは休む
+- たくさん歩くことでリフレッシュできた
 
 ### Problem
+- 読む本はあらかじめ決めておくより、読みたい本を読む方が集中できるかも
+- あれもこれもやろうとすると、コンテキストスイッチが入る。これはコストがかかるため、休養を重視する場合はよろしくない
 
 ### try
+- 明日は本を読むことに集中
+- 特に休養日は1冊読むことに集中する方がいいかも
 
 ## 所感
+休むは大事
+
+特に歩くといった、運動をして脳を活性化させる方がいい気がする。
+
+あと食事も大事
+
+
 
 
 ## 雑
