--- a/20210503.md
+++ b/20210503.md
@@ -1,5 +1,7 @@
 # 5月3日 憲法記念日
 
+[![hackmd-github-sync-badge](https://hackmd.io/U-wtxLBWQtmvHerEWIM-kg/badge)](https://hackmd.io/U-wtxLBWQtmvHerEWIM-kg)
+
 
 
 * 関係ないですけど、ベランダにおく椅子を買って、ベランダの床を磨いて、外で読書できる環境を構築しました。
@@ -13,19 +15,39 @@
 
 
 ## 作業ログ
+* 膝の関節の痛みが出てきたので、ウォーキングはほどほどに。
+* 「具体と抽象」読み直して新たな発見ができた
+* おかげで良いディスカッションができた
 
 ## 実績
+* Reactには触れられず。
 
 ## 振り返り
 
 ### Keep
+* 休むときは休む
+* コンテキストスイッチが起きないようにした
 
 ### Problem
+* 膝の関節の痛み
+* なんだか異常な眠気
+* 自己肯定感が下がってきた/疎外感を感じてしまった
 
 ### try
+* 自分に合った場所を探す
+* Tryの棚卸しができてなかったので、やりたい
 
 ## 所感
+毎日noteの記録が途切れてしまったが、質の悪い文章を書くよりも、質の良い記事を書いた方がいいと思い直した。ここはポジティブに行こう。
 
+あと、思ったより眠気がひどかった。特に午後。
+午前中は洗濯したり、布団干したり、ベランダの床を磨いたり色々できたが、午後の眠気のせいでパフォーマンスが上がらず。
+睡眠負債が解消できてないかもしれない。
+
+あとは、ウォーキングが１万歩越えられなかったのが悔しい。
+ただ、膝の関節が痛むのが気になるので、無理はしたくない。ただ、運動は幸福感につながるので、何か代替手段を考えないとと思っている。
+
+自己肯定感については引き続き向上させるように試行錯誤。
 
 ## 雑
 
