--- a/20210505.md
+++ b/20210505.md
@@ -1,26 +1,47 @@
 # 5月5日 連休最終日
 
+[![hackmd-github-sync-badge](https://hackmd.io/feO5oUfoSCSvg2EKzm7gbg/badge)](https://hackmd.io/feO5oUfoSCSvg2EKzm7gbg)
 
 
 ## 予定
 - [x] ユニコーン企業のひみつ 読み切る
-- [ ] 福原遥さん生配信視聴
-- [ ] プロダクトマネジメントのすべて輪読会 資料作成
+- [x] 福原遥さん生配信視聴
+- [x] プロダクトマネジメントのすべて輪読会 資料作成
 
 
 ## 作業ログ
+* 午前中は外で本を読めた
+* (読書のメモはつぶやき読書経由でTwitter)
+* 午後は雨
+* 少し休んで資料作成
+* 夕方は久々に思いっきり遊んだ
 
 ## 実績
+* とりあえず計画したことはやり切った
+
 
 ## 振り返り
 
 ### Keep
 
+* 本を1日読み切るができてよかった
+* Tryのtrello管理でチャレンジが色々できそう
+
 ### Problem
+
+* Tryをもう少し噛み砕く必要あり
 
 ### try
 
+* tryも残っているものを調整
+
 ## 所感
+
+連休最後。
+
+というか木金仕事で再び土日休暇。
+
+土曜日遊んで日曜日は学ぶ予定
 
 
 ## 雑
